Add rgpd + Deserialize mongo dasboard
