# backend/build/swagger.json
@@ -450,6 +450,9 @@
 					},
 					"userId": {
 						"type": "string"
+					},
+					"modelType": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -460,7 +463,58 @@
 					"y",
 					"w",
 					"h",
-					"userId"
+					"userId",
+					"modelType"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IWidgetWithData": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					},
+					"settings": {},
+					"x": {
+						"type": "number",
+						"format": "double"
+					},
+					"y": {
+						"type": "number",
+						"format": "double"
+					},
+					"w": {
+						"type": "number",
+						"format": "double"
+					},
+					"h": {
+						"type": "number",
+						"format": "double"
+					},
+					"userId": {
+						"type": "string"
+					},
+					"modelType": {
+						"type": "string"
+					},
+					"data": {}
+				},
+				"required": [
+					"name",
+					"type",
+					"settings",
+					"x",
+					"y",
+					"w",
+					"h",
+					"userId",
+					"modelType"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -492,6 +546,9 @@
 					},
 					"userId": {
 						"type": "string"
+					},
+					"modelType": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -502,10 +559,113 @@
 					"y",
 					"w",
 					"h",
-					"userId"
+					"userId",
+					"modelType"
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IRGPDModule": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"content": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string",
+						"enum": [
+							"popup",
+							"text_block"
+						]
+					},
+					"requiresAcceptance": {
+						"type": "boolean"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"content",
+					"type",
+					"requiresAcceptance",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_IRGPDModule.Exclude_keyofIRGPDModule.id-or-createdAt-or-updatedAt__": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"content": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string",
+						"enum": [
+							"popup",
+							"text_block"
+						]
+					},
+					"requiresAcceptance": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"name",
+					"content",
+					"type",
+					"requiresAcceptance"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IRGPDModule.id-or-createdAt-or-updatedAt_": {
+				"$ref": "#/components/schemas/Pick_IRGPDModule.Exclude_keyofIRGPDModule.id-or-createdAt-or-updatedAt__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateRGPDModuleDTO": {
+				"$ref": "#/components/schemas/Omit_IRGPDModule.id-or-createdAt-or-updatedAt_"
+			},
+			"Partial_CreateRGPDModuleDTO_": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"content": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string",
+						"enum": [
+							"popup",
+							"text_block"
+						]
+					},
+					"requiresAcceptance": {
+						"type": "boolean"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"UpdateRGPDModuleDTO": {
+				"$ref": "#/components/schemas/Partial_CreateRGPDModuleDTO_"
 			},
 			"Partial_IProduct_": {
 				"properties": {
@@ -2497,6 +2657,46 @@
 			}
 		},
 		"/widgets/{widgetId}": {
+			"get": {
+				"operationId": "GetWidget",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IWidgetWithData"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Widgets"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "widgetId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
 			"put": {
 				"operationId": "UpdateWidget",
 				"responses": {
@@ -2576,6 +2776,41 @@
 				]
 			}
 		},
+		"/widgets/data/{modelType}": {
+			"get": {
+				"operationId": "GetWidgetData",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Widgets"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "modelType",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/stripe-webhook": {
 			"post": {
 				"operationId": "HandleWebhook",
@@ -2606,6 +2841,219 @@
 						}
 					}
 				}
+			}
+		},
+		"/rgpd": {
+			"post": {
+				"operationId": "createRGPDModule",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IRGPDModule"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateRGPDModuleDTO"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "getAllRGPDModules",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IRGPDModule"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/rgpd/{id}": {
+			"get": {
+				"operationId": "getRGPDModule",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IRGPDModule"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "updateRGPDModule",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IRGPDModule"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateRGPDModuleDTO"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "deleteRGPDModule",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/rgpd/export": {
+			"get": {
+				"operationId": "exportRGPDModules",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IRGPDModule"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"RGPD"
+				],
+				"security": [
+					{
+						"jwt": [
+							"ROLE_ADMIN"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/payments/create-session/{userId}": {
